Updated home responsive

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     </nav>
     <!-- Start header -->
     <section id="home">
-        <div class="relative" style="height: 1000px; background-color: #DDC6B6;">
-            <div class="pr-36 pl-14 py-24 absolute rounded-r-xl -mt-64" style="top: 450px;">
-                <img class="relative w-full" src="logo/LogoRienArnouts.png" >
+        <div class="relative" style="height: 950px; background-color: #DDC6B6;">
+            <div class=" lg:mx-auto lg:pr-0 xl:pr-36 lg:pl-0 xl:pl-14 lg:py-16 xl:py-24 absolute rounded-r-xl -mt-64" style="max-height: 1000px; top: 50%;">
+                <img class="relative lg:h-full w-full" src="logo/LogoRienArnouts.png" >
             </div>
-            <div class="px-20 py-20 h-5/8 absolute rounded-l-xl right-0" style="top: 260px; width: 45%; background-color: #262223;">
-                <p class="text-white relative leading-tight" style="font-size: 7rem; color: #DDC6B6;">
+            <div id="widthCheck" class="px-20 py-20 h-5/8 absolute rounded-l-xl right-0" style="top: 260px; width: 45%; background-color: #262223;">
+                <p id="visText" class="text-white relative leading-tight" style="font-size: 7rem; color: #DDC6B6;">
                     Atelier <br>
                     Rien Arnouts
                     <!-- Keramiek & <br> Brons -->
@@ -331,7 +331,7 @@
                             <textarea id="message" name="message" rows="4" class="block w-full rounded-md border-gray-300 py-3 px-4 placeholder-gray-500 shadow-sm focus:border-indigo-500 focus:ring-indigo-500" placeholder="Bericht"></textarea>
                         </div>
                         <div>
-                            <button onclick="sendEmail()" class="buttonSubmit rounded p-2" type="submit">Submit</button>
+                            <button onclick="sendEmail()" class="buttonSubmit rounded p-2" type="submit">Verzenden</button>
                         </div>
                     </form>
                 </div>
