Deleted dead code

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <!-- Start header -->
     <section id="home">
         <div class="relative" style="height: 950px; background-color: #DDC6B6;">
-            <div class=" lg:mx-auto lg:pr-0 xl:pr-36 lg:pl-0 xl:pl-14 lg:py-16 xl:py-24 absolute rounded-r-xl -mt-64" style="max-height: 1000px; top: 50%;">
+            <div class="lg:mx-auto lg:pr-0 xl:pr-36 lg:pl-0 xl:pl-14 lg:py-16 xl:py-24 absolute rounded-r-xl -mt-64" style="max-height: 1000px; top: 50%;">
                 <img class="relative lg:h-full w-full" src="logo/LogoRienArnouts.png" >
             </div>
-            <div id="widthCheck" class="px-20 py-20 h-5/8 absolute rounded-l-xl right-0" style="top: 260px; width: 45%; background-color: #262223;">
+            <div style="display: none;" class="px-20 py-20 h-5/8 absolute rounded-l-xl right-0" style="top: 260px; width: 45%; background-color: #262223;">
                 <p id="visText" class="text-white relative leading-tight" style="font-size: 7rem; color: #DDC6B6;">
                     Atelier <br>
                     Rien Arnouts
