fixed white line problem

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body class="w-full h-full" style="margin-top: 0px;">
     <nav style="z-index: 99;" class="sticky">
-
             <div id="homeLogo" class="hide">
                 <ul class="nav-wrapper">
                     <li class="nav-logo"><a href="#home"><img class="logo" src="logo/LogoRienArnouts.png"></a></li>
@@ -26,7 +25,7 @@
             </div>
             <div id="hamburgerMenu" class="hide">
                 <div id="buttons" class="open">
-                    <div id="openSign" class="my-4 mx-4">
+                    <div id="openSign" class="mx-4">
                         <li class="nav-logo">
                             <button onclick="openHamburger()" >
                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="none" viewBox="0 0 24 24" stroke="currentColor">
